@@ -1,8 +1,11 @@
 package ru.skypro.homework.service.impl;
 
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.http.MediaType;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
+import org.springframework.web.multipart.MultipartFile;
 import ru.skypro.homework.dto.NewPassword;
 import ru.skypro.homework.dto.UpdateUser;
 import ru.skypro.homework.dto.UserDTO;
@@ -14,26 +17,26 @@ import ru.skypro.homework.service.FileService;
 import ru.skypro.homework.service.UserService;
 
 import java.io.IOException;
+import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.util.Arrays;
 import java.util.Optional;
 
 @Service
 public class UserServiceImpl implements UserService {
-    private final Path DIRECTORY_PATH = Path.of("image/");
+
+    private final String IMAGE_DIRECTORY;
+    private final FileService fileService;
     private final UserMapper mapper;
     private final UserRepository userRepository;
     private final PasswordEncoder encoder;
-    private final UserService userService;
-    private final FileService fileService;
 
-    public UserServiceImpl(UserMapper mapper, UserRepository userRepository, PasswordEncoder encoder, UserService userService, FileService fileService) {
+    public UserServiceImpl(@Value("${path.to.user.images}") String imageDirectory, FileService fileService,
+                           UserMapper mapper, UserRepository userRepository, PasswordEncoder encoder) {
+        IMAGE_DIRECTORY = imageDirectory;
+        this.fileService = fileService;
         this.mapper = mapper;
         this.userRepository = userRepository;
         this.encoder = encoder;
-        this.userService = userService;
-        this.fileService = fileService;
     }
 
     @Override
@@ -70,7 +73,10 @@ public class UserServiceImpl implements UserService {
 
     @Override
     public UserDTO getUserInfo(Authentication authentication) {
-        return mapper.toUserDTO(getFromAuthentication(authentication));
+        User user = getFromAuthentication(authentication);
+        UserDTO result = mapper.toUserDTO(getFromAuthentication(authentication));
+        result.setImage("/image/user/" + user.getEmail());
+        return result;
     }
 
     @Override
@@ -83,20 +89,38 @@ public class UserServiceImpl implements UserService {
     }
 
     @Override
-    public void updateImage(String image) {
-        User user = new User();
-        byte[] imageBytes = image.getBytes();
-        user.setImage(Arrays.toString(imageBytes));
-        Path filePath = Paths.get(String.valueOf(DIRECTORY_PATH), image);
+    public void setImage(MultipartFile image, Authentication authentication) {
+        User user = getFromAuthentication(authentication);
+        String oldName = user.getImage();
+        String sourceName = image.getOriginalFilename();//"image.jpg";//
+        String fileName = user.getId() + sourceName.substring(sourceName.lastIndexOf("."));
+        Path path = Path.of(IMAGE_DIRECTORY).resolve(fileName);
         try {
-            fileService.readFile(filePath);
+            if (oldName != null){
+                Files.deleteIfExists(Path.of(oldName));
+            }
+            fileService.saveFile(path, image.getBytes());
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
+        user.setImage(path.toString());
+        saveUser(user);
+    }
+
+    @Override
+    public byte[] getImage(String email) {
+        String filePath = getByEmail(email).getImage();
         try {
-            fileService.saveFile(filePath, imageBytes);
+            return fileService.readFile(Path.of(filePath));
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
+    }
+
+    @Override
+    public MediaType getImageType(String email) {
+        String filePath = getByEmail(email).getImage();
+        String subtype = filePath.substring(filePath.lastIndexOf(".")).replace(".", "");
+        return new MediaType("image", subtype);
     }
 }
